--- a/style.css
+++ b/style.css
@@ -2,14 +2,19 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
+}
+body{
+    font-family: 'Roboto', sans-serif;
 }
 nav{
-    height: 10vh;
-    background: transparent;
+    min-height: 10vh;
+    background: #2b8d28;
     display: flex;
     list-style: none;
     justify-content: space-around;
     align-items: center;
+    justify-self: center;
     z-index: 99;
    
 }
@@ -82,13 +87,22 @@ svg {
     font-size: 20vh;
     width: fit-content;
     top: 100px;
-    left: 250px;
+    left: 300px;
+    text-align: center;
     z-index: 4;
 }
 
 .main{
     height: 100vh;
     background: wheat;
+}
+
+#quotes{
+    position: absolute;
+    display: flex;
+    top: 60%;
+    left: 50%;
+    color: white;
 }
 
 @media only screen and (max-width: 700px) {
@@ -102,14 +116,14 @@ svg {
     }
 
     .line1{
-        width: 15px;
+        width: 25px;
         height: 3px;
         background: white;
         z-index: 6;
         margin: 5px;
     }
     .line2{
-        width: 25px;
+        width: 15px;
         height: 3px;
         background: white;
         z-index: 6;
@@ -176,5 +190,24 @@ svg {
     .nav-links li.fade{
         opacity: 1;
     }
+    .content h1{
+        left: 60px;
+    }
 
+}
+
+:root {
+    --shadow: rgb(0, 41, 10);
+    --scrollbarBG:rgb(2, 102, 10);
+    --thumbBG: rgb(7, 158, 45);
+}
+::-webkit-scrollbar {
+    width: 9px;
+}
+::-webkit-scrollbar-track {
+     background: var(--scrollbarBG);
+}
+::-webkit-scrollbar-thumb {
+     background-color: var(--thumbBG);
+     box-shadow: 0 -100vh 0 100vh var(--shadow), 0 0 15px 5px black;
 }
